Редактирование Bottom Sheet, текста кнопки выбора городов, редактирование названий файлов и классов

--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -45,5 +45,7 @@
   "attention": "Внимание!",
   "clear_favorite_text": "Очистить весь список избранного?",
   "yes": "Да",
-  "no": "Нет"
+  "no": "Нет",
+  "togliatty": "Тольятти",
+  "samara": "Самара"
 }
